src/objects/Profile__c.object
<CustomObject>
    <description>Profiles of the resources</description>
    <fields>
        <fullName>Contact_No__c</fullName>
        <description>Primary contact no.</description>
        <label>Contact No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>CSC Employee ID</description>
        <externalId>true</externalId>
        <inlineHelpText>CSC Employee ID</inlineHelpText>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the resource</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Skill__c</fullName>
        <label>Primary Skill</label>
        <picklist>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesLogix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC DEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Primary_Skill__c</columns>
        <columns>Location__c</columns>
        <columns>Contact_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_No_Numeric_Validation</fullName>
        <active>true</active>
        <description>Contact_No_Numeric_Validation - allow spaces ( )  - +</description>
        <errorConditionFormula>REGEX( Contact_No__c, &quot;^[0-9]&quot;)</errorConditionFormula>
        <errorDisplayField>Contact_No__c</errorDisplayField>
        <errorMessage>Contact number should be valid phoine number</errorMessage>
    </validationRules>
</CustomObject>